# TaiLerDownloader

./: .gitignore  Cargo.toml  ChangeLog  README.md  重大变更说明.md
.github/workflows/: build_and_test.yml
bindings/c/: TTHSDownloader.hpp
bindings/godot/src/: tthsd_downloader.cpp
bindings/golang/: native.go
bindings/nodejs/src/: native.ts
bindings/rust/src/: ffi.rs
docs/zh/api/: API-overview.md
docs/zh/api/functions/: get_performance_stats.md  set_proxy.md  set_retry_config.md  set_speed_limit.md
scripts/: test_tthsd.py  tester.py  tthsd_interface.py
src/core/: android_export.rs  downloader.rs  ed2k_downloader.rs  export.rs  file_utils.rs  ftp_downloader.rs  get_downloader.rs  http3_downloader.rs  http_downloader.rs  metalink_downloader.rs  mod.rs  send_message.rs  sftp_downloader.rs  socket_client.rs  torrent_downloader.rs  websocket_client.rs
