[package]
name = "tthsd"
version = "0.1.0-dev.3"
edition = "2024"

[lib]
name = "tthsd"
crate-type = ["cdylib"]

[dependencies]
tokio = { version = "1.40", features = ["rt-multi-thread", "net", "time", "fs", "sync", "io-util"] }
reqwest = { package = "rquest", version = "5.1", default-features = false, features = ["stream"] }
rquest-util = { version = "2.2", default-features = false, features = ["emulation"] }
tokio-tungstenite = { version = "0.28.0", default-features = false, features = ["rustls-tls-native-roots", "connect"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
num_cpus = "1.16"
tokio-util = "0.7"
futures = "0.3.32"
once_cell = "1.21.3"
suppaftp = { version = "8.0", features = ["tokio"] }
url = "2"
jni = { version = "0.22.3", optional = true }
lazy_static = "1.5.0"
librqbit = { version = "8.1", default-features = false, features = ["rust-tls"] }
metalink = "0.1"
h3 = "0.0.8"
h3-quinn = "0.0.10"
quinn = { version = "0.11", default-features = false, features = ["rustls"] }
rustls = { version = "0.23.37", default-features = false, features = ["ring"] }
webpki-roots = "1.0.6"
bytes = "1"
http = "1"
russh = { version = "0.57.1", default-features = false, features = ["aws-lc-rs", "rsa"] }
russh-sftp = { version = "2.0", default-features = false }

[features]
default = []
android = ["jni"]

[profile.release]
lto = true                # 链接时优化，消除死代码
codegen-units = 1         # 单代码生成单元，利于优化
strip = "symbols"         # 自动剥离调试符号（Rust 1.59+）
opt-level = "z"           # 优化大小（可选，也可保留默认的3）
